fixed scrollbar detail page, added animations to detail action buttons and css

--- a/stream-helper/src/styles/MovieDetail.css
+++ b/stream-helper/src/styles/MovieDetail.css
@@ -60,27 +60,24 @@
   overflow: auto;
   white-space: nowrap;
 }
-/* width */
-/* ::-webkit-scrollbar {
-  width: 20px;
-} */
 
-/* Track */
-/* ::-webkit-scrollbar-track {
+div.movieDetailCast::-webkit-scrollbar {
+  width: 20px;
+}
+
+div.movieDetailCast::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
-} */
+}
 
-/* Handle */
-/* ::-webkit-scrollbar-thumb {
+div.movieDetailCast::-webkit-scrollbar-thumb {
   background: rgb(241, 239, 239);
   border-radius: 10px;
-} */
+}
 
-/* Handle on hover */
-/* ::-webkit-scrollbar-thumb:hover {
+div.movieDetailCast::-webkit-scrollbar-thumb:hover {
   background: #b30000;
-} */
+}
 
 .creditUniqueDetail {
   display: flex;
